# robotic-arm-ros2

./: README.md
images-videos/: rviz-and-gazebo-harmonic-simulation-arm_controller_testing.txt
my_robotic_arm/: CMakeLists.txt  package.xml  servo_keyboard.py
my_robotic_arm/config/: my_controllers.yaml
my_robotic_arm/launch/: controllers.launch.py  display.launch.py  gazebo.launch.py  gz_moveit.launch.py  robot_state_publisher.launch.py  rviz.launch.py  spawn_robot.launch.py
my_robotic_arm/rviz/: view_robot.rviz
my_robotic_arm/src/: simple_servo.cpp
my_robotic_arm/urdf/: Arm_Urdf.urdf  arm_urdf.urdf
my_robotic_arm_moveit_config/: .setup_assistant  package.xml
my_robotic_arm_moveit_config/config/: arm_urdf.ros2_control.xacro  arm_urdf.srdf  arm_urdf.urdf  arm_urdf.urdf.xacro  arm_urdf_gazebo.ros2_control.xacro  arm_urdf_gazebo.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
my_robotic_arm_moveit_config/config/servo/: servo_config.yaml
my_robotic_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  moveit_servo.launch.py  rsp.launch.py  servo_simulation.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robotic_arm/: CMakeLists.txt  package.xml
robotic_arm/config/: my_controllers.yaml
robotic_arm/launch/: controllers.launch.py  display.launch.py  gz_moveit.launch.py  gz_spawn.launch.py  robot_state_pub.launch.py  rviz.launch.py  simulation.launch.py  spawn_robot.launch.py
robotic_arm/meshes/: claw1.STL  claw2.STL  finger1.STL  finger2.STL  gripper-base.STL  link2.STL
robotic_arm/rviz/: rviz_view.rviz
robotic_arm/urdf/: arm_gripper_urdf.csv  arm_gripper_urdf.urdf
robotic_arm_moveit_config/: .setup_assistant  package.xml
robotic_arm_moveit_config/config/: arm_gripper_urdf.ros2_control.xacro  arm_gripper_urdf.srdf  arm_gripper_urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robotic_arm_moveit_config/config/servo/: moveit_servo_config.yaml
robotic_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
