<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jasvir11@todo.todo">jasvir11</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>ament_index_cpp</depend>

  <depend>moveit_servo</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf2_ros</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
